# Parser-SPEF

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Parser-SPEFConfig.cmake.in  README.md  parser-spef.hpp  simple.cpp  spefparser.hpp
benchmark/: simple.spef  systemcdes.spef
doc/: example.cpp
example/: simple  simple.cpp
parser-spef/: parser-spef.hpp
unittest/: benchmark.cpp  parser-spef.cpp  spefparser.cpp
